@@ -30,19 +30,31 @@ static void
 process_file(const char *filename)
 {
 	avro_file_reader_t  reader;
+	FILE *fp;
+	int  should_close;
 
 	if (filename == NULL) {
-		if (avro_file_reader_fp(stdin, "<stdin>", 0, &reader)) {
-			fprintf(stderr, "Error opening <stdin>:\n  %s\n",
-				avro_strerror());
-			exit(1);
-		}
+		fp = stdin;
+		filename = "<stdin>";
+		should_close = 0;
 	} else {
-		if (avro_file_reader(filename, &reader)) {
+		fp = fopen(filename, "rb");
+		should_close = 1;
+
+		if (fp == NULL) {
 			fprintf(stderr, "Error opening %s:\n  %s\n",
-				filename, avro_strerror());
+				filename, strerror(errno));
 			exit(1);
 		}
+	}
+
+	if (avro_file_reader_fp(fp, filename, 0, &reader)) {
+		fprintf(stderr, "Error opening %s:\n  %s\n",
+			filename, avro_strerror());
+		if (should_close) {
+			fclose(fp);
+		}
+		exit(1);
 	}
 
 	avro_schema_t  wschema;
@@ -67,9 +79,17 @@ process_file(const char *filename)
 		avro_value_reset(&value);
 	}
 
+	if (!feof(fp)) {
+		fprintf(stderr, "Error: %s\n", avro_strerror());
+	}
+
 	avro_file_reader_close(reader);
 	avro_value_decref(&value);
 	avro_value_iface_decref(iface);
+
+	if (should_close) {
+		fclose(fp);
+	}
 }
 
 
